[gd_scene load_steps=39 format=3 uid="uid://bpq3kfwju28e8"]

[ext_resource type="Script" uid="uid://bfl71q3d57n8s" path="res://levels/game_level.gd" id="1_8ylxn"]
[ext_resource type="Script" uid="uid://ehj364xag1df" path="res://utils/game_timer.gd" id="2_iwr3d"]
[ext_resource type="PackedScene" uid="uid://bg64wc8fibctr" path="res://ui/hud.tscn" id="3_ja3hk"]
[ext_resource type="PackedScene" uid="uid://btq3rsvojx8jg" path="res://ui/pause_menu.tscn" id="4_x3i4c"]
[ext_resource type="PackedScene" uid="uid://dgmcs2um4230a" path="res://ui/ui_game_sfx.tscn" id="5_jppc8"]
[ext_resource type="Shader" uid="uid://bpm1kus70ig4j" path="res://background_items/background.gdshader" id="6_xu7nj"]
[ext_resource type="Texture2D" uid="uid://dp0yqs3ec4c18" path="res://terrain/sky-tile.png" id="7_u84lg"]
[ext_resource type="Script" uid="uid://d1h6tovc4c4ol" path="res://background_items/background.gd" id="8_fbuyd"]
[ext_resource type="PackedScene" uid="uid://l1x5kvupj7so" path="res://terrain/terrain.tscn" id="9_b5rak"]
[ext_resource type="PackedScene" uid="uid://b7vpl03hcrs3e" path="res://walls/walls.tscn" id="10_hw8a8"]
[ext_resource type="PackedScene" uid="uid://bogp8cydgto88" path="res://personnel/pickup_copter.tscn" id="11_5dbbs"]
[ext_resource type="PackedScene" uid="uid://boa5a2v0w2ag0" path="res://terrain/floor.tscn" id="12_vl2c1"]
[ext_resource type="PackedScene" uid="uid://no0hhhxjq8ql" path="res://effects/wind.tscn" id="13_2i235"]
[ext_resource type="Script" uid="uid://c34my4i57wvu7" path="res://levels/round/round_director.gd" id="14_h1k02"]
[ext_resource type="PackedScene" uid="uid://d3q2cfp8mqu2x" path="res://tank/artillery_spawner.tscn" id="15_k8tcd"]
[ext_resource type="PackedScene" uid="uid://bncglf44illq3" path="res://weapons/weapon_leadball.tscn" id="16_4t21x"]
[ext_resource type="PackedScene" uid="uid://sthucbuglqt5" path="res://controller/ai/variations/ai_tank_brute.tscn" id="16_hw8a8"]
[ext_resource type="PackedScene" uid="uid://5tt4q4rs2fkg" path="res://controller/ai/variations/ai_tank_rando.tscn" id="17_5dbbs"]
[ext_resource type="PackedScene" uid="uid://45gqgsjcmu2i" path="res://weapons/weapon_leadball_burst.tscn" id="17_put14"]
[ext_resource type="PackedScene" uid="uid://dtl6c4qaxjdaj" path="res://weapons/weapon_kilonuke.tscn" id="18_ba3th"]
[ext_resource type="PackedScene" uid="uid://glc752ioound" path="res://controller/ai/variations/ai_tank_lobber.tscn" id="18_vl2c1"]
[ext_resource type="PackedScene" uid="uid://dtjulft5slr3v" path="res://controller/ai/variations/ai_tank_wallmaster.tscn" id="19_2i235"]
[ext_resource type="PackedScene" uid="uid://bamvmc2k56pyk" path="res://effects/post_processing/post_processing.tscn" id="19_pk5c6"]
[ext_resource type="PackedScene" uid="uid://dlh1i2cvw3mim" path="res://voiceovers/announcer.tscn" id="20_8saf5"]
[ext_resource type="PackedScene" uid="uid://d3hlh5amohta" path="res://controller/ai/variations/ai_tank_windwunder.tscn" id="20_h1k02"]
[ext_resource type="PackedScene" uid="uid://dps6lqs28tqa1" path="res://controller/player/player.tscn" id="21_iwr3d"]
[ext_resource type="PackedScene" uid="uid://4sagk5utumdt" path="res://controller/ai/variations/sniper/ai_tank_sniper.tscn" id="21_k8tcd"]
[ext_resource type="PackedScene" uid="uid://bad70clwv5pu3" path="res://controller/ai/variations/nearsight/ai_tank_nearsight.tscn" id="22_4t21x"]
[ext_resource type="Script" uid="uid://dlosg08ehpwdc" path="res://levels/special/factory.gd" id="22_ja3hk"]
[ext_resource type="PackedScene" uid="uid://cv6k5ub7mpj8t" path="res://levels/day_weather.tscn" id="28_h1k02"]
[ext_resource type="PackedScene" uid="uid://xnyh8uolctrv" path="res://buildings/evaporator/factorygreeble.tscn" id="30_5dbbs"]
[ext_resource type="PackedScene" uid="uid://dkju13ltbvatr" path="res://buildings/evaporator/factorygreeble2.tscn" id="31_2i235"]
[ext_resource type="Texture2D" uid="uid://32r1u2b1v6jo" path="res://buildings/evaporator/factory_greebles.png" id="32_h1k02"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_chthv"]
shader = ExtResource("6_xu7nj")
shader_parameter/speed = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60ghs"]
size = Vector2(1248, 688)

[sub_resource type="Gradient" id="Gradient_876hk"]
offsets = PackedFloat32Array(0, 0.996503)
colors = PackedColorArray(0.36, 0.819, 0.9, 1, 0.893948, 0.934432, 0.610706, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h1k02"]
gradient = SubResource("Gradient_876hk")
width = 1280
height = 720
fill_from = Vector2(1, 0.149573)
fill_to = Vector2(1, 0.84188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwr3d"]
size = Vector2(192, 20)

[node name="LevelSpecialFactory" type="Node2D"]

[node name="GameLevel" type="Node2D" parent="."]
script = ExtResource("1_8ylxn")
level_name = &"Factory"

[node name="GameTimer" type="Node" parent="GameLevel"]
unique_name_in_owner = true
process_mode = 1
script = ExtResource("2_iwr3d")

[node name="UI" type="CanvasLayer" parent="GameLevel"]
unique_name_in_owner = true
layer = 100

[node name="HUD" parent="GameLevel/UI" instance=ExtResource("3_ja3hk")]
unique_name_in_owner = true

[node name="PauseMenu" parent="GameLevel/UI" instance=ExtResource("4_x3i4c")]
visible = false

[node name="UI_Game_SFX" parent="GameLevel/UI" instance=ExtResource("5_jppc8")]

[node name="Background" type="TextureRect" parent="GameLevel"]
z_index = -100
material = SubResource("ShaderMaterial_chthv")
offset_right = 2048.0
offset_bottom = 2048.0
texture = ExtResource("7_u84lg")
expand_mode = 1
stretch_mode = 1
script = ExtResource("8_fbuyd")
wind_scoll_scale = 2.0
min_wind_scroll_speed = 2.0

[node name="Terrain" parent="GameLevel" instance=ExtResource("9_b5rak")]
unique_name_in_owner = true
z_index = -10
position = Vector2(118, 444)
scale = Vector2(1.28, 0.68)

[node name="CollisionPolygon2D" parent="GameLevel/Terrain/TerrainChunk" index="1"]
polygon = PackedVector2Array()

[node name="Polygon2D" parent="GameLevel/Terrain/TerrainChunk" index="2"]
polygon = PackedVector2Array(-103.125, 7.35297, -53.9063, -16.1765, 19.5313, -36.7647, 75, -36.7647, 128.906, -2.94116, 168.75, 17.647, 229.688, 20.5883, 289.844, 4.41174, 321.094, -29.4117, 335.156, -72.0588, 345.313, -107.353, 361.719, -120.588, 377.344, -107.353, 384.375, -63.2353, 387.5, 4.41174, 394.531, 82.353, 596.094, 82.353, 941.406, 82.353, 945, 445, -103, 448)

[node name="Walls" parent="GameLevel" instance=ExtResource("10_hw8a8")]
unique_name_in_owner = true
wall_randomization_weights = Dictionary[int, float]({
0: 0.7
})

[node name="CollisionShape2D" parent="GameLevel/Walls/PlayableArea" index="0"]
position = Vector2(636, 358)
shape = SubResource("RectangleShape2D_60ghs")

[node name="LeftBlockingWall" parent="GameLevel/Walls/BlockingAreas" index="0"]
position = Vector2(-11, -2)

[node name="PickupCopter" parent="GameLevel/Walls" instance=ExtResource("11_5dbbs")]
position = Vector2(640, -192)

[node name="Floor" parent="GameLevel" instance=ExtResource("12_vl2c1")]
unique_name_in_owner = true
position = Vector2(-2, 731)

[node name="Wind" parent="GameLevel" instance=ExtResource("13_2i235")]
unique_name_in_owner = true
wind_scale = 200.0

[node name="RoundDirector" type="Node" parent="GameLevel"]
unique_name_in_owner = true
script = ExtResource("14_h1k02")
physics_check_time = 0.25
fall_check_timeout = 0.5
request_sleep_on_fall_detection = false
player_goes_first = true
shuffle_order = false

[node name="ArtillerySpawner" parent="GameLevel" instance=ExtResource("15_k8tcd")]
unique_name_in_owner = true
artillery_ai_types = Array[PackedScene]([ExtResource("16_hw8a8"), ExtResource("17_5dbbs"), ExtResource("18_vl2c1"), ExtResource("19_2i235"), ExtResource("20_h1k02"), ExtResource("21_k8tcd"), ExtResource("22_4t21x")])
artillery_ai_starting_weapons = Array[PackedScene]([ExtResource("16_4t21x"), ExtResource("17_put14"), ExtResource("18_ba3th")])

[node name="PostProcessing" parent="GameLevel" instance=ExtResource("19_pk5c6")]
unique_name_in_owner = true

[node name="Announcer" parent="GameLevel" instance=ExtResource("20_8saf5")]

[node name="DayWeather" parent="GameLevel" node_paths=PackedStringArray("sun_light", "game_level") instance=ExtResource("28_h1k02")]
unique_name_in_owner = true
sun_light = NodePath("../TheSunLight")
game_level = NodePath("..")

[node name="TheSunLight" type="PointLight2D" parent="GameLevel"]
position = Vector2(640, -640)
color = Color(0.9, 0.9, 0.9, 1)
energy = 0.33
range_item_cull_mask = 3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 1
shadow_item_cull_mask = 5
texture = SubResource("GradientTexture2D_h1k02")
offset = Vector2(0, 720)
texture_scale = 3.0

[node name="Player" parent="GameLevel" instance=ExtResource("21_iwr3d")]
position = Vector2(173, 404)
enable_damage_before_first_turn = false

[node name="Factory" type="Node2D" parent="GameLevel" node_paths=PackedStringArray("damageable_components")]
position = Vector2(934, 500)
script = ExtResource("22_ja3hk")
schedule = Dictionary[int, int]({
0: 2,
3: 1,
6: 1,
10: 2,
15: 2,
20: 2,
23: 1,
25: 1,
27: 1,
30: 3,
35: 3,
40: 3,
45: 3,
50: 4,
55: 4,
60: 4,
65: 4,
70: 4,
74: 4,
78: 4,
82: 4,
85: 4,
88: 4,
90: 4,
93: 4,
95: 4,
97: 4,
99: 4,
100: 4
})
damageable_components = [NodePath("Evaporator"), NodePath("Evaporator2")]

[node name="Evaporator" parent="GameLevel/Factory" instance=ExtResource("30_5dbbs")]
position = Vector2(-246, 0)

[node name="Evaporator2" parent="GameLevel/Factory" instance=ExtResource("31_2i235")]
position = Vector2(314, 0)

[node name="Conveyor" type="AnimatableBody2D" parent="GameLevel/Factory"]
position = Vector2(-54, 0)
collision_layer = 3
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameLevel/Factory/Conveyor"]
position = Vector2(80, -25)
shape = SubResource("RectangleShape2D_iwr3d")

[node name="Polygon2D" type="Polygon2D" parent="GameLevel/Factory/Conveyor"]
color = Color(0.314316, 0.314316, 0.314316, 1)
polygon = PackedVector2Array(-15.8578, -19.2205, -15.8578, -35.2205, 144.142, -35.2205, 144.142, -19.2205)
uv = PackedVector2Array(-20, -16, -20, -32, 140, -32, 140, -16)

[node name="Spawnpoint" type="Marker2D" parent="GameLevel/Factory/Conveyor"]
unique_name_in_owner = true
position = Vector2(126, -41)

[node name="Polygon2D" type="Polygon2D" parent="GameLevel/Factory"]
position = Vector2(-78, 0)
color = Color(0.372251, 0.372251, 0.372251, 1)
texture = ExtResource("32_h1k02")
polygon = PackedVector2Array(4, 0, 4, -44, 308, -44, 308, 0)
uv = PackedVector2Array(-28, 256, -28, 176, 276, 176, 276, 256)

[editable path="GameLevel/Terrain"]
[editable path="GameLevel/Terrain/TerrainChunk"]
[editable path="GameLevel/Walls"]
